Fixed masonry issue with sections, stopped widget overlay getting cut off by sidebar overflow.

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -10,17 +10,18 @@
     // -----------------------------
 
 
+    &.edit .template-header {
+        overflow: visible;
+    }
+
+
     &.edit .template-container {
         @media only screen and (max-width:1450px) {
             margin: 0 25px;
         }
     }
-    
-    
-    .template-header,
-    div[role="main"] {
-        // overflow: inherit;
-    }
+
+
     div[role="main"] {
         float: none;
         overflow-x: inherit;
